implemented detected_person_identification.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 __pycache__
+
 test/
 README.md
+
+detected_person_identification/known_people_db/*
+detected_person_identification/known_people_db/Mike/*
+!detected_person_identification/known_people_db/Mike
+detected_person_identification/known_people_db/Kevin/*
+!detected_person_identification/known_people_db/Kevin
+
+*Profiling*.json
+*.html
